Wrap bug

--- a/frontend/components/checkinsWrapper/checkinsWrapper.styl
+++ b/frontend/components/checkinsWrapper/checkinsWrapper.styl
@@ -52,6 +52,7 @@ section
                     color white
                     text-align center
                     border-radius 7px
+                    word-break: break-all
                 li
                     margin 1.3em 2em
                     position relative
